; ModuleID = '/home/carl/AnghaBench/vlc/compat/extr_sincos.c_sincos.c'
source_filename = "/home/carl/AnghaBench/vlc/compat/extr_sincos.c_sincos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sincos(double %0, double* noalias %1, double* noalias %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca double*, align 8
  %6 = alloca double*, align 8
  store double %0, double* %4, align 8
  store double* %1, double** %5, align 8
  store double* %2, double** %6, align 8
  %7 = load double, double* %4, align 8
  %8 = call double @sin(double %7) #2
  %9 = load double*, double** %5, align 8
  store double %8, double* %9, align 8
  %10 = load double, double* %4, align 8
  %11 = call double @cos(double %10) #2
  %12 = load double*, double** %6, align 8
  store double %11, double* %12, align 8
  ret void
}

; Function Attrs: nounwind
declare dso_local double @sin(double) #1

; Function Attrs: nounwind
declare dso_local double @cos(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
